packages/typ/tests/fixtures/diagnostics/0235_adt_variant_branch_result_mismatch_10.ml.expected
File "0235_adt_variant_branch_result_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0235_adt_variant_branch_result_mismatch_10 is not a valid module name.

File "0235_adt_variant_branch_result_mismatch_10.ml", line 4, characters 14-15:
4 |   | Mark y -> y
                  ^
Error: The value y has type bool but an expression was expected of type int
